[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
itertools = "0.11.0"
lazy_static = "1.4.0"
nom = "7.1.3"
regex = "1.9.1"
serde_scan = "0.4.1"
text_io = "0.1.12"
