(lang dune 3.10)

(name aoc)

(generate_opam_files true)

(source
 (github markkovari/advent_of_code))

(authors "Mark Kovari")

(maintainers "Definitely not Mark Kovari")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name aoc)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
